--- a/DevOps-Tips/日志管理/graylog/nxlog.conf
+++ b/DevOps-Tips/日志管理/graylog/nxlog.conf
@@ -3,6 +3,7 @@
 ########################################
 ##
 # 引用 http://www.emind.co/how-to/configure-nxlog-send-logs-to-graylog2/
+# linux 客户端nxlog.conf 模板
 User nxlog
 Group nxlog
 
